[package]
name = "sha2_example"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
bincode = "1.3"
tokio = { version = "1.52.3", features = ["full"] }
secp256k1 = { version = "0.31", features = ["rand", "hashes", "serde"] }
rand = "0.8"